# abbyterm

./: .gitignore  README.md  index.html  package-lock.json  package.json  reinstall_deb.sh  setup.sh  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
scripts/: dev-dynamic-port.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ratel_mode.rs  ssh_config.rs
src-tauri/src/commands/: app_commands.rs  container_commands.rs  mod.rs  pty_commands.rs  session_commands.rs  shell_commands.rs  ssh_commands.rs  window_commands.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs  unix_pty.rs
src/components/: AboutModal.tsx  ErrorBoundary.tsx
src/components/Settings/: PluginsPage.tsx  SettingsPanel.tsx  ShortcutRecorder.tsx
src/components/Shared/: ContextMenu.tsx
src/components/TabBar/: Tab.tsx  TabBar.tsx  TabContextMenu.tsx
src/components/Terminal/: SearchBox.tsx  SplitPane.tsx  Terminal.tsx  TerminalContainer.tsx  TerminalContextMenu.tsx
src/components/TitleBar/: DockerButton.tsx  K8sButton.tsx  MenuButton.tsx  NewTabButton.tsx  SessionButton.tsx  TitleBar.tsx  WindowControls.tsx
src/components/TitleBar/Dropdown/: Dropdown.tsx
src/hooks/: useDevtools.ts  useGlobalShortcuts.ts  useSessionManager.ts
src/plugins/: registry.ts
src/plugins/terminal/: particles.ts  registry.ts  runtime.ts  types.ts
src/store/: settingsStore.ts  tabStore.ts
src/styles/: globals.css
src/types/: pane.ts  settings.ts  tab.ts  terminal.ts  zmodem.d.ts
