[package]
name = "abbyterm"
version = "0.1.0"
description = "A modern terminal emulator"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
directories = "5.0"
dirs = "5.0"
futures = "0.3"
libc = "0.2"
tauri-plugin-clipboard-manager = "2.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
