[package]
name = "abbyterm"
version = "0.1.0"
description = "A modern terminal emulator"
authors = ["you"]
edition = "2021"
resolver = "2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
directories = "5.0"
dirs = "5.0"
futures = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
ssh2 = "0.9"
ratel-rust = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
